# head-first-design-patterns

./: .gitignore
Cpp/: .gitignore  CMakeLists.txt
Cpp/SimUDuck/duck/: DecoyDuck.cpp  DecoyDuck.h  Duck.cpp  Duck.h  MallardDuck.cpp  MallardDuck.h  ModelDuck.cpp  ModelDuck.h  RubberDuck.cpp  RubberDuck.h
Cpp/SimUDuck/fly/: FlyBehavior.cpp  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyRocketPowered.cpp  FlyRocketPowered.h  FlyWithWings.cpp  FlyWithWings.h
Cpp/SimUDuck/quack/: MuteQuack.cpp  MuteQuack.h  Quack.cpp  Quack.h  QuackBehavior.cpp  QuackBehavior.h  Squeak.cpp  Squeak.h
Java/src/Command_RemoteControl/: RemoteControlTest.java  SimpleRemoteControl.java
Java/src/Composite_RestaurantMenu/: CafeMenu.java  CafeMenuIterator.java  DessertMenu.java  DinerAlternativeMenuIterator.java  DinerMenu.java  DinerMenuIterator.java  Menu.java  MenuComponent.java  MenuDriveTest.java  MenuItem.java  MenuIterator.java  PancakeHouseMenu.java  PancakeHouseMenuIterator.java  Waitress.java
Java/src/Iterator_RestaurantMenu/: CafeMenu.java  CafeMenuIterator.java  DinerAlternativeMenuIterator.java  DinerMenu.java  DinerMenuIterator.java  Menu.java  MenuDriveTest.java  MenuItem.java  MenuIterator.java  PancakeHouseMenu.java  PancakeHouseMenuIterator.java  Waitress.java
Java/src/SimUDuck/: MiniDuckSimulator.java
Python/: .gitignore
Python/SimUDuck/: SimUDuck.py  duck.py  fly.py  quack.py
src/SimUDuck/: DuckCallDevice.java
src/SimUDuck/duck/: DecoyDuck.java  Duck.java  ModelDuck.java  RedheadDuck.java  RubberDuck.java
src/SimUDuck/fly/: FlyNoWay.java  FlyRocketPowered.java
(+24 files in other folders)
